--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,3 +122,17 @@ r.LightPropagationVolume=False
 EditorStartupMap=/Game/Maps/Chess_Level.Chess_Level
 GameDefaultMap=/Game/Maps/Chess_Level.Chess_Level
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=60521C1F48C12B41AB7AF58E0ECAADE1
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
